# chukchi

./: .gitignore  .mailmap  MANIFEST.in  requirements.txt  setup.cfg  setup.py
chukchi/: cmd.py
