[metadata]
name = chukchi
summary = Chukchi is an RSS aggregation webapp
description-file =
    README
author = Edward Toroshchin
author-email = chukchi-project@hades.name
classifier =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Flask
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 2 :: Only

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    chukchi
include_package_data = True

[entry_points]
console_scripts =
    chukchi-init-db = chukchi.cmd:init_db
    chukchi-run = chukchi.cmd:run
    chukchi-update-feeds = chukchi.cmd:update_feeds
